0.6.16/io.gladed.watchable/-watchable-set/index.md
[io.gladed.watchable](../index.md) / [WatchableSet](./index.md)

# WatchableSet

`interface WatchableSet<T> : `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`MutableSet`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-set/index.html)`<`[`T`](index.md#T)`>, `[`SetChange`](../-set-change/index.md)`<`[`T`](index.md#T)`>>, `[`ReadOnlyWatchableSet`](../-read-only-watchable-set.md)`<`[`T`](index.md#T)`>`

A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may also be modified or bound. Use [watchableSetOf](../watchable-set-of.md) to create.

### Inherited Properties

| Name | Summary |
|---|---|
| [boundTo](../-mutable-watchable/bound-to.md) | `abstract val boundTo: `[`Watchable`](../-watchable/index.md)`<*>?`<br>The [Watchable](../-watchable/index.md) to which this object is bound, if any. |

### Functions

| Name | Summary |
|---|---|
| [add](add.md) | `open suspend fun add(element: `[`T`](index.md#T)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Add [element](add.md#io.gladed.watchable.WatchableSet$add(io.gladed.watchable.WatchableSet.T)/element) to this set, returning true if the set changed. |
| [addAll](add-all.md) | `open suspend fun addAll(elements: `[`Collection`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-collection/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>`open suspend fun addAll(elements: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>`open suspend fun addAll(elements: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>`open suspend fun addAll(elements: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Add [elements](add-all.md#io.gladed.watchable.WatchableSet$addAll(kotlin.collections.Collection((io.gladed.watchable.WatchableSet.T)))/elements) to this set, returning true if the set changed. |
| [minusAssign](minus-assign.md) | `open suspend operator fun minusAssign(element: `[`T`](index.md#T)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Remove [element](minus-assign.md#io.gladed.watchable.WatchableSet$minusAssign(io.gladed.watchable.WatchableSet.T)/element) from this set.`open suspend operator fun minusAssign(elements: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<`[`T`](index.md#T)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`open suspend operator fun minusAssign(elements: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.md#T)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`open suspend operator fun minusAssign(elements: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`T`](index.md#T)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Remove [elements](minus-assign.md#io.gladed.watchable.WatchableSet$minusAssign(kotlin.Array((io.gladed.watchable.WatchableSet.T)))/elements) from this set. |
| [plusAssign](plus-assign.md) | `open suspend operator fun plusAssign(value: `[`T`](index.md#T)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Add [value](plus-assign.md#io.gladed.watchable.WatchableSet$plusAssign(io.gladed.watchable.WatchableSet.T)/value) to this set.`open suspend operator fun plusAssign(elements: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<`[`T`](index.md#T)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`open suspend operator fun plusAssign(elements: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.md#T)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`open suspend operator fun plusAssign(elements: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`T`](index.md#T)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Add [elements](plus-assign.md#io.gladed.watchable.WatchableSet$plusAssign(kotlin.Array((io.gladed.watchable.WatchableSet.T)))/elements) to this set. |
| [readOnly](read-only.md) | `abstract fun readOnly(): `[`ReadOnlyWatchableSet`](../-read-only-watchable-set.md)`<`[`T`](index.md#T)`>`<br>Return an unmodifiable form of this [WatchableSet](./index.md). |
| [remove](remove.md) | `open suspend fun remove(element: `[`T`](index.md#T)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Remove [element](remove.md#io.gladed.watchable.WatchableSet$remove(io.gladed.watchable.WatchableSet.T)/element) from this set, returning true if the set changed. |
| [removeAll](remove-all.md) | `open suspend fun removeAll(elements: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>`open suspend fun removeAll(elements: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>`open suspend fun removeAll(elements: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Remove [elements](remove-all.md#io.gladed.watchable.WatchableSet$removeAll(kotlin.collections.Iterable((io.gladed.watchable.WatchableSet.T)))/elements) from the set, returning true if the set changed. |
| [retainAll](retain-all.md) | `open suspend fun retainAll(elements: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.md#T)`>): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Retain only the elements in this set that are found in [elements](retain-all.md#io.gladed.watchable.WatchableSet$retainAll(kotlin.collections.Iterable((io.gladed.watchable.WatchableSet.T)))/elements), returning true if the set changed. |

### Inherited Functions

| Name | Summary |
|---|---|
| [bind](../-mutable-watchable/bind.md) | `abstract fun bind(scope: CoroutineScope, origin: `[`Watchable`](../-watchable/index.md)`<`[`C`](../-mutable-watchable/index.md#C)`>): `[`Watcher`](../-watcher/index.md)<br>Binds this unbound object to [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/origin), such that when [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/origin) changes, this object is updated to match [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/origin) exactly, until [scope](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/scope) completes. While bound, this object may not be externally modified or rebound.`abstract fun <C2 : `[`Change`](../-change/index.md)`> bind(scope: CoroutineScope, origin: `[`Watchable`](../-watchable/index.md)`<`[`C2`](../-mutable-watchable/bind.md#C2)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, apply: `[`M`](../-mutable-watchable/index.md#M)`.(`[`C2`](../-mutable-watchable/bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../-watcher/index.md)<br>Binds this unbound object to [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/origin), such that for every change to [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/origin), the change is applied to this object with [apply](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/apply), until [scope](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/scope) completes. While bound, this object may not be externally modified or rebound. |
| [clear](../-mutable-watchable/clear.md) | `abstract suspend fun clear(): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Remove all items. |
| [invoke](../-mutable-watchable/invoke.md) | `abstract suspend operator fun <U> invoke(func: `[`M`](../-mutable-watchable/index.md#M)`.() -> `[`U`](../-mutable-watchable/invoke.md#U)`): `[`U`](../-mutable-watchable/invoke.md#U)<br>Suspend until [func](../-mutable-watchable/invoke.md#io.gladed.watchable.MutableWatchable$invoke(kotlin.Function1((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.invoke.U)))/func) can safely execute on the mutable form [M](../-mutable-watchable/index.md#M) of this watchable, returning [func](../-mutable-watchable/invoke.md#io.gladed.watchable.MutableWatchable$invoke(kotlin.Function1((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.invoke.U)))/func)'s result. [func](../-mutable-watchable/invoke.md#io.gladed.watchable.MutableWatchable$invoke(kotlin.Function1((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.invoke.U)))/func) must not block or return the mutable form outside of this routine. |
| [isBound](../-mutable-watchable/is-bound.md) | `open fun isBound(): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Return true if this object is already bound. |
| [twoWayBind](../-mutable-watchable/two-way-bind.md) | `abstract fun twoWayBind(scope: CoroutineScope, other: `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`M`](../-mutable-watchable/index.md#M)`, `[`C`](../-mutable-watchable/index.md#C)`>): `[`Watcher`](../-watcher/index.md)<br>`abstract fun <M2, C2 : `[`Change`](../-change/index.md)`> twoWayBind(scope: CoroutineScope, other: `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`M2`](../-mutable-watchable/two-way-bind.md#M2)`, `[`C2`](../-mutable-watchable/two-way-bind.md#C2)`>, update: `[`M`](../-mutable-watchable/index.md#M)`.(`[`C2`](../-mutable-watchable/two-way-bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`, updateOther: `[`M2`](../-mutable-watchable/two-way-bind.md#M2)`.(`[`C`](../-mutable-watchable/index.md#C)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../-watcher/index.md)<br>Bind [other](../-mutable-watchable/two-way-bind.md#io.gladed.watchable.MutableWatchable$twoWayBind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.C)))/other) to this so that any change in either object is reflected in the other. |
| [unbind](../-mutable-watchable/unbind.md) | `abstract fun unbind(): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Remove any existing binding for this object. |

### Extension Functions

| Name | Summary |
|---|---|
| [guarded](../../io.gladed.watchable.util/guarded.md) | `fun <T> `[`T`](../../io.gladed.watchable.util/guarded.md#T)`.guarded(): `[`Guard`](../../io.gladed.watchable.util/-guard/index.md)`<`[`T`](../../io.gladed.watchable.util/guarded.md#T)`>`<br>Return [T](../../io.gladed.watchable.util/guarded.md#T) surrounded by a [Guard](../../io.gladed.watchable.util/-guard/index.md). |
| [toWatchableList](../kotlin.collections.-iterable/to-watchable-list.md) | `fun <T> `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](../kotlin.collections.-iterable/to-watchable-list.md#T)`>.toWatchableList(): `[`WatchableList`](../-watchable-list/index.md)`<`[`T`](../kotlin.collections.-iterable/to-watchable-list.md#T)`>`<br>Return a new [WatchableList](../-watchable-list/index.md) containing the elements of this [Iterable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html). |
| [toWatchableSet](../kotlin.collections.-iterable/to-watchable-set.md) | `fun <T> `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](../kotlin.collections.-iterable/to-watchable-set.md#T)`>.toWatchableSet(): `[`WatchableSet`](./index.md)`<`[`T`](../kotlin.collections.-iterable/to-watchable-set.md#T)`>`<br>Return a new [WatchableSet](./index.md) containing the elements of this [Iterable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html). |
| [toWatchableValue](../to-watchable-value.md) | `fun <T> `[`T`](../to-watchable-value.md#T)`.toWatchableValue(): `[`WatchableValue`](../-watchable-value/index.md)`<`[`T`](../to-watchable-value.md#T)`>`<br>Convert this [T](../to-watchable-value.md#T) to a watchable value of [T](../to-watchable-value.md#T). |
